<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".preference.PreferenceFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="47dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pref_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/pref_storing_data"
                android:textAllCaps="false" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_retrieve_data"
                android:textAllCaps="false"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:id="@+id/pref_retrieve"/>
             <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_remove_specific_data"
                android:textAllCaps="false"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:id="@+id/pref_remove"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_clear_all_data"
                android:textAllCaps="false"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:id="@+id/pref_clear_all"/>
              <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text=""
                android:id="@+id/pref_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
      <!--      <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_margin="15dp"
                android:alpha=".5"
                android:background="#ECECEC" />-->

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>